--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5",
-  "useTabs": false
-  // "printWidth": 80
+  "useTabs": false,
+  "printWidth": 120
 }
