--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a project during my studies @NeueFische to showcase not just a project but rather myself",
   "main": "index.js",
   "scripts": {
+    "dev": "live-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
