Add stylelint and fix issues

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "live-server",
-    "test": "npx htmlhint '**/*.html'"
+    "test": "npx htmlhint '**/*.html' && npx stylelint '**/*.css'"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Tim-Pet/personal-website#readme",
   "devDependencies": {
     "htmlhint": "0.14.2",
-    "live-server": "1.2.1"
+    "live-server": "1.2.1",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0"
   }
 }
